# fp-course

./: README.markdown  hscope.out  stack.yaml
projects/TicTacToe/: .ghci  TicTacToe.hs  tictactoe.cabal
src/Course/: '  Anagrams.hs  Applicative.hs  Cheque-parser.hs  Cheque.hs  Comonad.hs  Compose.hs  Core.hs  Extend.hs  FastAnagrams.hs  FileIO.hs  Functor.hs  Id.hs  Interactive.hs  JsonParser.hs  List.hs  ListZipper.hs  Monad.hs  MoreParser.hs  Optional.hs  Parser.hs  State.hs  StateT.hs  div
