name:               tictactoe 
version:            0.0.1
license:            BSD3
license-File:       etc/LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
homepage:           https://github.com/NICTA/course
cabal-version:      >= 1.10
build-type:         Custom

source-repository   head
  type:             git
  location:         git@github.com:NICTA/course.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language: Haskell2010

  build-depends:    base < 5 && >= 4
                    , QuickCheck

  ghc-options:      -Wall

  hs-source-dirs:   src

  exposed-modules:
                     TicTacToe 

